# chip8_emulator

./: CMakeLists.txt  README.md  chip8.h  cpu.c  cpu.h  machine.c  machine.h  main.c  memory.c  memory.h  processor.c  processor.h  ram.c  ram.h
libprovided/include/display/: sprite.h
libprovided/include/keyboard/: keyboard.h
libprovided/include/misc/: error.h
libprovided/lib/debug/msvc/: libprovided.lib
libprovided/lib/release/msvc/: libprovided.lib
